# Tulibon

./: .gitignore  .npmrc  index.html  latest.json  package-lock.json  package.json  plugins.json  vite.config.ts
plugins/collections/: index.js  index.tsx  plugin.json  settings.js  settings.tsx
plugins/history/: index.js  index.tsx  plugin.json  settings.js  settings.tsx
plugins/ocr/: index.js  index.tsx  plugin.json  settings.js  settings.tsx
plugins/search/: index.js  index.tsx  plugin.json  settings.js  settings.tsx
scripts/: build-plugins.mjs  bump-version.mjs  generate-icons.mjs  release-plugins.mjs  release.mjs  render-icons.mjs  upload-models.mjs
src/: App.css  App.tsx  main.tsx  styles.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_paths.rs  config_crypto.rs  data.rs  download.rs  error.rs  image.rs  lib.rs  main.rs  ocr.rs  plugin_manager.rs  protocol.rs  window.rs
src/api/: gemini.ts  index.ts  ocr.ts  ocrManager.ts  openaiProvider.ts  prompts.ts  validate.ts
src/components/: AboutModal.tsx  DiskImage.tsx  Dropdown.tsx  ErrorBoundary.tsx  ForceUpdateModal.tsx  Home.tsx  PluginContainer.tsx  PluginSettingsContainer.tsx  ResultView.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useAnalysis.ts  useCropHandlers.ts  useCroppedImage.tsx  useHomeActions.ts  useInputHandlers.ts  usePreferences.ts  useReveal.ts  useTagManagement.ts  useUndoManager.ts
src/locales/: en.json  zh.json
src/sdk/: PluginSDK.ts
src/styles/: App.css  (+6 more)
(+58 files in other folders)
